main.sass: Ensure pointer is visible on anchor mouseover

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -608,6 +608,7 @@ h1, h2, h3, h4, h5, h6  {
 
   &:hover .zola-anchor {
     all: initial;
+    cursor: pointer;
     visibility: visible;
   }
 
